Added additional routes for second collection.
