# routes/index.js
@@ -6,6 +6,7 @@ const swaggerDocument = require('../swagger/swaggerDoc.json');
 
 const rootCtrl = require('../controllers');
 const rollingStock = require('./rollingStock');
+const railroads = require('./railroads');
 
 // API Documentation
 routes.use('/api-docs', swaggerUi.serve);
@@ -15,5 +16,6 @@ routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
 // All other routes
 routes.get('/', rootCtrl.defaultRoute);
 routes.use('/roster', rollingStock);
+routes.use('/railroad', railroads)
 
 module.exports = routes;
